Add employee self-service account claim
